--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
     namespace 'com.example.moviesapplication'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.moviesapplication"
@@ -41,4 +42,29 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    //Room
+    implementation "androidx.room:room-ktx:2.5.2"
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt"androidx.room:room-compiler:2.5.2"
+    //ViewModel& livedata
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation"androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    //Coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //GSON
+    implementation 'com.google.code.gson:gson:2.10.1'
+    //Coroutines Dependencies
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
 }
