--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MoviesApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MoviesActivity"
+            android:name=".moviesscreen.view.MoviesActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
