--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,24 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
+
+    //test
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.test:core-ktx:1.5.0"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    testImplementation "org.robolectric:robolectric:4.8"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.hamcrest:hamcrest:2.2"
+    testImplementation "org.hamcrest:hamcrest-library:2.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation 'org.assertj:assertj-core:3.21.0'
+    androidTestImplementation 'com.google.truth:truth:1.1'
+    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation "androidx.test:core:1.3.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test:rules:1.3.0"
 }
