--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MoviesApplication"
         tools:targetApi="31">
         <activity
-            android:name=".detailsscreen.MovieDetailsActivity"
+            android:name=".detailsscreen.view.MovieDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".moviesscreen.view.MoviesActivity"
